--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <section id="Home" class="home">
                 <div class="profile-img-container">
-                    <img src="C:/Users/PC/Desktop/WEB DEVELOPMENT/photo.png" alt="Profile Image" class="profile-img">
+                    <img src="photo.png" alt="Profile Image" class="profile-img">
                 </div>
                 <div class="home-content">
                     <h1>Hi, I'm Peter Ng'ang'a</h1>
