--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <section id="Home" class="home">
                 <div class="profile-img-container">
-                    <img src="photo.png" alt="Profile Image" class="profile-img">
+                    <img src="images/photo.png" alt="Profile Image" class="profile-img">
                 </div>
                 <div class="home-content">
                     <h1>Hi, I'm Peter Ng'ang'a</h1>
@@ -71,25 +71,25 @@
                 <div class="services-grid">
                     <!-- Image 1 -->
                     <div class="grid-item">
-                        <img src="data.jpeg" alt="Services Image 1">
+                        <img src="images/data.jpeg" alt="Services Image 1">
                         <p>Highlight of skills and Services we offer with their related Analytical Softwares </p>
                     </div>
 
                     <!-- Image 2 -->
                     <div class="grid-item">
-                        <img src="visualization.jpeg" alt="Services Image 2">
+                        <img src="images/visualization.jpeg" alt="Services Image 2">
                         <p>Data Visualization is always the goal.Transform Your Business with Tailored IT Solutions</p>
                     </div>
 
                     <!-- Image 3 -->
                     <div class="grid-item">
-                        <img src="rw.jpeg" alt="Services Image 3">
+                        <img src="images/rw.jpeg" alt="Services Image 3">
                         <p>Statistical Data Analysis, which involves Data cleaning, Interpretation, Analysis and Visualization for more understanding</p>
                     </div>
 
                     <!-- Image 4 -->
                     <div class="grid-item">
-                        <img src="design.jpeg" alt="Services Image 4">
+                        <img src="images/design.jpeg" alt="Services Image 4">
                         <p>Front-end Web Development, let's build great things that makes life easier together</p>
                     </div>
                 </div>
