editted the contact

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
                     <button type="submit">Send Email</button>
                 </form>
-                <p>You can also reach me via SMS or call at <strong>0743729799</strong>.</p>
+                <p>You can also reach me via SMS or call at <strong>+254743729799</strong>.</p>
              </div>
             </section>
         </main>
